--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.6
 pydantic==2.5.3
 pydantic_core==2.14.6
 python-dotenv==1.0.0
+pytz==2024.2
 PyYAML==6.0.1
 sniffio==1.3.0
 starlette==0.35.1
